# ncert_db

./: README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
core/: config.py  exceptions.py  logging.py
db/: indexes.py
db/models/: base.py  book.py  chapter.py  exam.py  extracted_page.py  ingestion.py  media_asset.py  ocr.py  pipeline.py
repos/: base.py
repos/mongo/: base_mongo_repo.py  book_repo.py  chapter_repo.py  client.py  exam_repo.py  extracted_page_repo.py  ingestion_repo.py  media_asset_repo.py  ocr_repo.py  pipeline_repo.py
scripts/: ingest_pdfs.py  split_pdfs.py
services/: pdf_extraction_service.py
services/ingestion/: ingestion_service.py
services/pdf/: pdf_extractor.py
services/storage/: minio_service.py
