[project]
name = "aiqg-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bson>=0.5.10",
    "minio>=7.2.20",
    "motor>=3.7.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rapidfuzz>=3.14.5",
    "structlog>=26.1.0",
]
